# find-minecraft-mods-rs

./: Cargo.toml  README.md
data/: list_of_mods_wanted.json
src/: main.rs  projects.rs
src/modrinth/: modrinth.rs
