[package]
name = "FindAllModsWithVersionModrinth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["serde_json", "cookies", "json"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"]}
serde = { version = "1.0.193", features = ["derive"] }
async-std = "1.12.0"
